# sbanks-lib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
sbanks/: __init__.py  geometry.py  savgol.py
sbanks_core/: __init__.py  geometry.py  savgol.py  whittaker.py
tests/: __init__.py  conftest.py  test_geometry.py  test_package_contract.py  test_savgol.py  test_whittaker.py  test_whittaker_comparison.py  test_whittaker_properties.py
