[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbanks-core"
version = "0.1.0"
description = "Pure Python geometry smoothing algorithms"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [
    {name = "Anatoly Tsyplenkov", email = "atsyplenkov@geogr.msu.ru"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "whittaker-eilers>=0.1.0",
    "hypothesis>=6.82.0",
]

[project.urls]
Homepage = "https://github.com/atsyplenkov/sbanks-lib"
Repository = "https://github.com/atsyplenkov/sbanks-lib"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "benchmark: speed comparison tests (skip in CI)",
    "property: property-based tests using Hypothesis",
]

[tool.hypothesis]
derandomize = true
