[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[project]
name = "sbanks-core"
version = "0.1.0"
description = "Pure Python geometry smoothing algorithms"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Anatoly Tsyplenkov", email = "hard.sign9115@fastmail.com" },
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.20.0", "scipy>=1.7.0"]
keywords = ["smoothing", "geometry", "gis", "whittaker-eilers", "savitzky-golay", "geometry-smoothing"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "whittaker-eilers>=0.1.0", "hypothesis>=6.82.0"]

[project.urls]
Homepage = "https://github.com/atsyplenkov/sbanks-lib"
Repository = "https://github.com/atsyplenkov/sbanks-lib"
"Author ORCID" = "https://orcid.org/0000-0003-4144-8402"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "benchmark: speed comparison tests between whittaker-eilers and sbanks",
    "property: property-based tests using Hypothesis",
]

[tool.hypothesis]
derandomize = true
